# asqi-engineer

./: README.md  litellm_config.yaml  litellm_handlers.py  pyproject.toml
config/suites/: sia_accuracy_test_suite.yaml
config/systems/: sia_systems.yaml
src/asqi/: datasets.py  schemas.py  validation.py  workflow.py
src/asqi/schemas/: asqi_manifest.schema.json  asqi_suite_config.schema.json
test_containers/accuracy_rag/: Dockerfile  README.md  answer_correctness.py  custom_gpt_model.py  entrypoint.py  faithfulness.py  generate_records_by_metric.py  helpfulness.py  if_metric.py  input_schemas.py  instructions.py  instructions_registry.py  instructions_util.py  manifest.yaml  pyproject.toml  relaxed_retrieval_correctness.py  report_generator_by_metric.py  retrieval_correctness.py
tests/: test_schema.py  test_validation.py
