[project]
name = "asqi-engineer"
dynamic = ["version"]
description = "ASQI quality checks for AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets[audio,vision]>=4.4.1",
    "dbos[otel]==2.7.0",
    "docker>=7.1.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "typer>=0.16.0",
    "urllib3>=2.6.0",
    "torchcodec>=0.9.1"
]

[project.scripts]
asqi = "asqi.main:app"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "myst-parser>=4.0.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
    "shibuya>=2025.8.16",
    "sphinx-autoapi>=3.6.0",
    "sphinx-click>=6.0.0",
    "sphinx-contributors>=0.2.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-typer>=0.5.1",
    "sphinx-new-tab-link>=0.8.0"
]
containers = ["deepteam==1.0.4", "litellm>=1.76.0", "openevals>=0.1.0"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "test_containers/mock_tester", "test_containers/mock_rag_tester", "test_containers/mock_image_generation_tester", "test_containers/mock_image_editing_tester", "test_containers/vlm_evaluator_tester"]
skips = ["B404", "B603"]

[build-system]
requires = ["hatchling", "hatch-vcs", "pydantic>=2.11.7"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asqi"]

[tool.hatch.build.hooks.custom]
path = "scripts/build_hooks.py"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
raw-options = { version_scheme = "no-guess-dev" }

[tool.uv]
package = true

[tool.uv.sources]
# Use nightly index for torchcodec, which otherwise doesn't have a Linux Arch64 build. See https://github.com/meta-pytorch/torchcodec/issues/569#issuecomment-3637002460
torchcodec = { index = "pytorch_nightly", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}

[[tool.uv.index]]
name = "pytorch_nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
# Only use this index when explicitly specified
explicit = true
