[project]
name = "faithfulness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.7.3",
    "pydantic>=2.0.0",
    "ragas>=0.3.9",
    "rapidfuzz>=3.14.3",
    "nltk>=3.8.1",
    "immutabledict>=4.0.0",
    "arakawa>=0.2.0",
    "plotly>=6.5.0",
    "asqi-engineer @ git+https://github.com/mayank-soni/asqi-engineer.git@PLT-507-add-support-for-datasets",
]

