[project]
name = "faithfulness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.7.3",
    "pydantic>=2.0.0",
    "ragas>=0.3.9",
    "rapidfuzz>=3.14.3",
    "nltk>=3.8.1",
    "immutabledict>=4.0.0",
    "arakawa>=0.2.0",
    "plotly>=6.5.0",
    "asqi-engineer",
]

[tool.uv.sources]
asqi-engineer = { git = "https://github.com/mayank-soni/asqi-engineer", branch = "PLT-507-add-support-for-datasets" }
# Use nightly index for torchcodec, which otherwise doesn't have a Linux Arch64 build. See https://github.com/meta-pytorch/torchcodec/issues/569#issuecomment-3637002460
torchcodec = { index = "pytorch_nightly", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }

[[tool.uv.index]]
name = "pytorch_nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
# Only use this index when explicitly specified
explicit = true